--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.petjadesapp.activity.MainActivity"
+    tools:context="com.monzonis.petjadesapp.activity.MainActivity"
     tools:showIn="@layout/activity_main">
+<!--
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="364dp"
+        android:layout_height="88dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="30dp"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toBottomOf="@+id/ibIntroCamera"
+        app:layout_constraintTop_toTopOf="@+id/txtIntroCamera"></com.google.android.gms.ads.AdView>
+-->
 
     <ImageView
         android:id="@+id/imgBackgroung"
@@ -20,14 +36,16 @@
 
     <TextView
         android:id="@+id/txtBackground"
-        android:layout_width="334dp"
-        android:layout_height="66dp"
+        android:layout_width="317dp"
+        android:layout_height="151dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="38dp"
         android:layout_marginEnd="30dp"
         android:text="@string/txtMenuBackground"
         android:textAlignment="center"
         android:textColor="#FF000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,13 +67,12 @@
         android:id="@+id/ibIntroList"
         android:layout_width="135dp"
         android:layout_height="120dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="217dp"
-        android:layout_marginEnd="30dp"
         android:backgroundTint="#00FFFFFF"
         android:onClick="goToAnimalsListActivity"
         android:scaleType="fitCenter"
-        app:layout_constraintEnd_toStartOf="@+id/ibIntroDicho"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/lobo_sombra" />
@@ -64,14 +81,12 @@
         android:id="@+id/ibIntroDicho"
         android:layout_width="135dp"
         android:layout_height="120dp"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="217dp"
-        android:layout_marginEnd="46dp"
+        android:layout_marginEnd="35dp"
         android:backgroundTint="#00FFFFFF"
         android:onClick="goToDicotomicActivity"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ibIntroList"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/rastre" />
 
@@ -79,7 +94,7 @@
         android:id="@+id/ibIntroCamera"
         android:layout_width="135dp"
         android:layout_height="120dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="40dp"
         android:backgroundTint="#00FFFFFF"
         android:onClick="goToCameraActivity"
@@ -92,13 +107,11 @@
         android:id="@+id/txtIntroAnimalList"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="33dp"
         android:text="@string/txtListMenu"
         android:textAlignment="center"
         android:textColor="#FF000000"
-        app:layout_constraintEnd_toStartOf="@+id/txtIntroDicho"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ibIntroList" />
 
@@ -106,21 +119,19 @@
         android:id="@+id/txtIntroDicho"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="46dp"
+        android:layout_marginEnd="35dp"
         android:text="@string/txtDichotomousMenu"
         android:textAlignment="center"
         android:textColor="#FF000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtIntroAnimalList"
         app:layout_constraintTop_toBottomOf="@+id/ibIntroDicho" />
 
     <TextView
         android:id="@+id/txtIntroCamera"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="10dp"
         android:text="@string/txtMenuCamera"
         android:textAlignment="center"
