--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.petjadesapp.activity.CameraActivity">
+    tools:context="com.monzonis.petjadesapp.activity.CameraActivity">
 
     <TextureView
         android:id="@+id/texture"
