--- a/app/src/main/res/layout/content_animal_data.xml
+++ b/app/src/main/res/layout/content_animal_data.xml
@@ -154,12 +154,11 @@
                 android:id="@+id/ibCamera"
                 android:layout_width="66dp"
                 android:layout_height="51dp"
-                android:layout_marginStart="304dp"
-                android:layout_marginTop="292dp"
-                android:layout_marginEnd="21dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="285dp"
+                android:backgroundTint="#00FFFFFF"
                 android:onClick="goToCameraActivity"
                 android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/cameraicon" />
