versió sense anuncis 1.0.0 --> 24/09/2020

--- a/app/src/main/res/layout/activity_sample_carousel_view.xml
+++ b/app/src/main/res/layout/activity_sample_carousel_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.monzonis.petjadesapp.CameraActivity">
+    tools:context="com.mamiferos.huellasyrastros.CameraActivity">
 
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
