--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -10,18 +10,18 @@
     <TextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
-        android:layout_height="608dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true" />
 
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
-        android:layout_width="396dp"
-        android:layout_height="516dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:clipToPadding="false"
+        android:clipToPadding="true"
         app:autoPlay="false"
         app:fillColor="#FFFFFFFF"
         app:pageColor="#00000000"
@@ -34,18 +34,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="145dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="526dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:orientation="horizontal"
+        android:gravity="center">
 
         <ImageButton
             android:id="@+id/btn_takepicture"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:layout_marginStart="170dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:background="#00FFFFFF"
             android:scaleType="center"
             android:tint="#F3EFEF"
@@ -55,9 +55,8 @@
             android:id="@+id/btn_showAnimal"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:background="#00FFFFFF"
             android:scaleType="fitXY"
             android:tint="#F3EFEF"
