--- a/app/src/main/res/layout/content_animals_list.xml
+++ b/app/src/main/res/layout/content_animals_list.xml
@@ -49,7 +49,7 @@
     <ListView
         android:id="@+id/listViewAnimals"
         android:layout_width="match_parent"
-        android:layout_height="596dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="57dp">
 
     </ListView>
