--- a/app/src/main/res/layout/content_animals_list.xml
+++ b/app/src/main/res/layout/content_animals_list.xml
@@ -8,21 +8,18 @@
     android:orientation="vertical"
     tools:context="activity.AnimalsListActivity"
     tools:showIn="@layout/activity_animals_list">
-<!--
+
     <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="364dp"
-        android:layout_height="88dp"
+        android:id="@+id/adViewList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="30dp"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintTop_toBottomOf="@+id/ibIntroCamera"
-        app:layout_constraintTop_toTopOf="@+id/txtIntroCamera"></com.google.android.gms.ads.AdView>
--->
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
