--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,22 +9,19 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.mamiferos.huellasyrastros.activity.MainActivity"
     tools:showIn="@layout/activity_main">
-<!--
+
+
     <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="364dp"
-        android:layout_height="88dp"
+        android:id="@+id/adViewMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="30dp"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"
-        ads:layout_constraintStart_toStartOf="parent"
-        ads:layout_constraintTop_toBottomOf="@+id/ibIntroCamera"
-        app:layout_constraintTop_toTopOf="@+id/txtIntroCamera"></com.google.android.gms.ads.AdView>
--->
-
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:layout_constraintStart_toStartOf="parent" />
+<!--
     <ImageView
         android:id="@+id/imgBackgroung"
         android:layout_width="wrap_content"
@@ -33,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/intro2" />
-
+-->
     <TextView
         android:id="@+id/txtBackground"
         android:layout_width="317dp"
